--- a/cehat/FormLoading.resx
+++ b/cehat/FormLoading.resx
@@ -58,6 +58,120 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing.Common" name="System.Drawing.Common, Version=5.0.0.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAV8AAACLCAYAAADGbZoMAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
+        DwAAjA8AAP1SAACBQAAAfXkAAOmLAAA85QAAGcxzPIV3AAAKNWlDQ1BzUkdCIElFQzYxOTY2LTIuMQAA
+        SMedlndUVNcWh8+9d3qhzTDSGXqTLjCA9C4gHQRRGGYGGMoAwwxNbIioQEQREQFFkKCAAaOhSKyIYiEo
+        qGAPSBBQYjCKqKhkRtZKfHl57+Xl98e939pn73P32XuftS4AJE8fLi8FlgIgmSfgB3o401eFR9Cx/QAG
+        eIABpgAwWempvkHuwUAkLzcXerrICfyL3gwBSPy+ZejpT6eD/0/SrFS+AADIX8TmbE46S8T5Ik7KFKSK
+        7TMipsYkihlGiZkvSlDEcmKOW+Sln30W2VHM7GQeW8TinFPZyWwx94h4e4aQI2LER8QFGVxOpohvi1gz
+        SZjMFfFbcWwyh5kOAIoktgs4rHgRm4iYxA8OdBHxcgBwpLgvOOYLFnCyBOJDuaSkZvO5cfECui5Lj25q
+        bc2ge3IykzgCgaE/k5XI5LPpLinJqUxeNgCLZ/4sGXFt6aIiW5paW1oamhmZflGo/7r4NyXu7SK9Cvjc
+        M4jW94ftr/xS6gBgzIpqs+sPW8x+ADq2AiB3/w+b5iEAJEV9a7/xxXlo4nmJFwhSbYyNMzMzjbgclpG4
+        oL/rfzr8DX3xPSPxdr+Xh+7KiWUKkwR0cd1YKUkpQj49PZXJ4tAN/zzE/zjwr/NYGsiJ5fA5PFFEqGjK
+        uLw4Ubt5bK6Am8Kjc3n/qYn/MOxPWpxrkSj1nwA1yghI3aAC5Oc+gKIQARJ5UNz13/vmgw8F4psXpjqx
+        OPefBf37rnCJ+JHOjfsc5xIYTGcJ+RmLa+JrCdCAACQBFcgDFaABdIEhMANWwBY4AjewAviBYBAO1gIW
+        iAfJgA8yQS7YDApAEdgF9oJKUAPqQSNoASdABzgNLoDL4Dq4Ce6AB2AEjIPnYAa8AfMQBGEhMkSB5CFV
+        SAsygMwgBmQPuUE+UCAUDkVDcRAPEkK50BaoCCqFKqFaqBH6FjoFXYCuQgPQPWgUmoJ+hd7DCEyCqbAy
+        rA0bwwzYCfaGg+E1cBycBufA+fBOuAKug4/B7fAF+Dp8Bx6Bn8OzCECICA1RQwwRBuKC+CERSCzCRzYg
+        hUg5Uoe0IF1IL3ILGUGmkXcoDIqCoqMMUbYoT1QIioVKQ21AFaMqUUdR7age1C3UKGoG9QlNRiuhDdA2
+        aC/0KnQcOhNdgC5HN6Db0JfQd9Dj6DcYDIaG0cFYYTwx4ZgEzDpMMeYAphVzHjOAGcPMYrFYeawB1g7r
+        h2ViBdgC7H7sMew57CB2HPsWR8Sp4sxw7rgIHA+XhyvHNeHO4gZxE7h5vBReC2+D98Oz8dn4Enw9vgt/
+        Az+OnydIE3QIdoRgQgJhM6GC0EK4RHhIeEUkEtWJ1sQAIpe4iVhBPE68QhwlviPJkPRJLqRIkpC0k3SE
+        dJ50j/SKTCZrkx3JEWQBeSe5kXyR/Jj8VoIiYSThJcGW2ChRJdEuMSjxQhIvqSXpJLlWMkeyXPKk5A3J
+        aSm8lLaUixRTaoNUldQpqWGpWWmKtKm0n3SydLF0k/RV6UkZrIy2jJsMWyZf5rDMRZkxCkLRoLhQWJQt
+        lHrKJco4FUPVoXpRE6hF1G+o/dQZWRnZZbKhslmyVbJnZEdoCE2b5kVLopXQTtCGaO+XKC9xWsJZsmNJ
+        y5LBJXNyinKOchy5QrlWuTty7+Xp8m7yifK75TvkHymgFPQVAhQyFQ4qXFKYVqQq2iqyFAsVTyjeV4KV
+        9JUCldYpHVbqU5pVVlH2UE5V3q98UXlahabiqJKgUqZyVmVKlaJqr8pVLVM9p/qMLkt3oifRK+g99Bk1
+        JTVPNaFarVq/2ry6jnqIep56q/ojDYIGQyNWo0yjW2NGU1XTVzNXs1nzvhZei6EVr7VPq1drTltHO0x7
+        m3aH9qSOnI6XTo5Os85DXbKug26abp3ubT2MHkMvUe+A3k19WN9CP16/Sv+GAWxgacA1OGAwsBS91Hop
+        b2nd0mFDkqGTYYZhs+GoEc3IxyjPqMPohbGmcYTxbuNe408mFiZJJvUmD0xlTFeY5pl2mf5qpm/GMqsy
+        u21ONnc332jeaf5ymcEyzrKDy+5aUCx8LbZZdFt8tLSy5Fu2WE5ZaVpFW1VbDTOoDH9GMeOKNdra2Xqj
+        9WnrdzaWNgKbEza/2BraJto22U4u11nOWV6/fMxO3Y5pV2s3Yk+3j7Y/ZD/ioObAdKhzeOKo4ch2bHCc
+        cNJzSnA65vTC2cSZ79zmPOdi47Le5bwr4urhWuja7ybjFuJW6fbYXd09zr3ZfcbDwmOdx3lPtKe3527P
+        YS9lL5ZXo9fMCqsV61f0eJO8g7wrvZ/46Pvwfbp8Yd8Vvnt8H67UWslb2eEH/Lz89vg98tfxT/P/PgAT
+        4B9QFfA00DQwN7A3iBIUFdQU9CbYObgk+EGIbogwpDtUMjQytDF0Lsw1rDRsZJXxqvWrrocrhHPDOyOw
+        EaERDRGzq91W7109HmkRWRA5tEZnTdaaq2sV1iatPRMlGcWMOhmNjg6Lbor+wPRj1jFnY7xiqmNmWC6s
+        faznbEd2GXuKY8cp5UzE2sWWxk7G2cXtiZuKd4gvj5/munAruS8TPBNqEuYS/RKPJC4khSW1JuOSo5NP
+        8WR4ibyeFJWUrJSBVIPUgtSRNJu0vWkzfG9+QzqUvia9U0AV/Uz1CXWFW4WjGfYZVRlvM0MzT2ZJZ/Gy
+        +rL1s3dkT+S453y9DrWOta47Vy13c+7oeqf1tRugDTEbujdqbMzfOL7JY9PRzYTNiZt/yDPJK817vSVs
+        S1e+cv6m/LGtHlubCyQK+AXD22y31WxHbedu799hvmP/jk+F7MJrRSZF5UUfilnF174y/ariq4WdsTv7
+        SyxLDu7C7OLtGtrtsPtoqXRpTunYHt897WX0ssKy13uj9l4tX1Zes4+wT7hvpMKnonO/5v5d+z9Uxlfe
+        qXKuaq1Wqt5RPXeAfWDwoOPBlhrlmqKa94e4h+7WetS212nXlR/GHM44/LQ+tL73a8bXjQ0KDUUNH4/w
+        jowcDTza02jV2Nik1FTSDDcLm6eORR67+Y3rN50thi21rbTWouPguPD4s2+jvx064X2i+yTjZMt3Wt9V
+        t1HaCtuh9uz2mY74jpHO8M6BUytOdXfZdrV9b/T9kdNqp6vOyJ4pOUs4m3924VzOudnzqeenL8RdGOuO
+        6n5wcdXF2z0BPf2XvC9duex++WKvU++5K3ZXTl+1uXrqGuNax3XL6+19Fn1tP1j80NZv2d9+w+pG503r
+        m10DywfODjoMXrjleuvyba/b1++svDMwFDJ0dzhyeOQu++7kvaR7L+9n3J9/sOkh+mHhI6lH5Y+VHtf9
+        qPdj64jlyJlR19G+J0FPHoyxxp7/lP7Th/H8p+Sn5ROqE42TZpOnp9ynbj5b/Wz8eerz+emCn6V/rn6h
+        ++K7Xxx/6ZtZNTP+kv9y4dfiV/Kvjrxe9rp71n/28ZvkN/NzhW/l3x59x3jX+z7s/cR85gfsh4qPeh+7
+        Pnl/eriQvLDwG/eE8/s6uL5TAAAACXBIWXMAAC4iAAAuIgGq4t2SAAAO2ElEQVR4Xu3cbYwkRR3Hcc4D
+        Dg/kQXjlC+O9uUTcEEhQ4IQXGATFZ9RNfKGGSGICeEZfoQRjYsQYNQr4ChEB4XKKSg45vHN370gMIMrD
+        rgm+IOiFJzVGJYAHu8Z4zn+3a6+29tfdVT3d1zUz30o+IdR0PcxMz29qqnvvqEOHDgEAjjBZCQDolqwE
+        AHRLVgIAuiUrAQDdkpUAgG7JSgBAt2QlAKBbsrILGygUCmUEisqvLsjKNhTPg0KhUEa6qHxrg6xsqphr
+        WF4HACNoXVG515SsTGWTuvvJJ4+de2Lp9Jk/vHrunsdfPs/Z+/uXtyn3//aVdwJA35Yz6eGX3rFr5h9v
+        2rBheuNh5UGscjCVrEwxM3/wzH0LS3cO/HvgEACMsKdmn3jtmpvueuTEkiBeLSoPU8jKGDb4/oWlrwwm
+        +99g8gAw6v6856GX3r5hw4VHr9AhrLIxlqyMsX9+8QYxYQAYD/NLr+z6zT/POfvszx5jDodwOwEsK+vs
+        m//Px+VkAWCMzA1WwF/93gMnT01NH7s2gFdDeLmonKwjK6vc/Nhjx+xfWDqgJgoA42bvo69cu2XL5cdt
+        3bp9U5sBLCvL2AD75hcvVhMEgHE0N7/01Ju3Tb/eBbCtgtvYgpCVZazzfQuLX1MTBIBx9f0f/26LH8Bi
+        D3i5qNwsIyuVou8Nc/OLt6nJAcC42rn32QvOPPNTx7sAXr8HnB7AslIp+rXwvUtNDgDG1Y69L1w0NXXV
+        CS6AS7YflovKT0VWKkW/ryN8AUyaHXufvWjrudtPtAAerHg3V20/qPxUZGXIOiwK4Qtg4tz1qwMXD4L2
+        pLee/5k3hNsPTVe/sjJU9GeF8AUwce647+lLzjrr8pPLV7/dhu+g4+mNs/OLO9TkAGBc3Xbv0+8544Ir
+        TwlXv8NsPcjKkHU2KIQvgIlk4Tu17Yo3+qvfqq0HlaMhWRmyzgaF8AUwkW77xfrwdVsPnYWvdVQUwhfA
+        RLLwPf2cq091Ww9h+K5sPaTt+8pKX9GPFcIXwES69Z4/vdcPX73vS/gCQKsIXwDoQQbhe+HRhC+ASRMX
+        vnbRjfAFgNa48HV3PBC+AHAEEL4A0APCFwB6QPgCQA8IXwDoAeELAD0gfAGgB4QvAPSA8AWAHhC+ANAD
+        whcAekD4AhPm+E0fi/L5a3bJ9mgH4QtMGBW0CuHbLcIXmDAqaBXCt1uEbybUyR+65e6nZNu22Thq/JBq
+        i/yp91IhfLtF+GZCnfyhc867TrZt29TUF+X4IdUW+VPvpUL4dovwzYQ6+ZWuPxDWvxpXUe2RP/VeKoRv
+        twjfTKiTv8wvH3xR9jEs61eNV0b1gfyp91IhfLtF+GZCnfxl3vXub8g+hmX9qvHKqD6QP/VeKoRvtwjf
+        TKiTv8oNt87Lfpqy/tQ4VVQ/yJ96LxXCt1uEbybUyV9H9dOU6r+O6gf5U++lQvh2i/DNhDr561xx9Q7Z
+        VyrrR/VfR/WF/Kn3UiF8u0X4ZkKd/DGGvfd3554XZL8xVH91bLzrb3xoOfBtj9lunwv7tVvd7LFPfPqW
+        5WO7uMBor5uFywcuu7Fyr9seM3asbc3EzkX1pcQGnB2n2iuqvU+1UWLnZu+Ral/FzgPV1yQhfDOhTtAY
+        w977WxU8dVR/in3QLGxj7x9WbJ72IVf9x7LgtEBX/aew52HPpyqIVTtl1MOX4G2O8M2EOkljxX6AQ9d+
+        fUb2F0v16bPV5TDhrlh/TVbCTbdW6liYq/HUscoohy/BOxzCNxPqRE3RJJBUPylUn86wwV4n9kNsx6mt
+        jbaUBZQ6VhnV8CV4h0f4ZkKdrClsRaj6LdPGz2/Vr2NfBqpNm2I+zKpdm8q+9NSxyiiGL8HbDsI3E+qE
+        TRV772/sP5xTR/Xta3vLIVS33931+GVbDkYdr4xa+BK87SF8M6FO2iZU36G2foarvn1thXwVC4O+xq4K
+        FXW8Mkrh22TfnOAtR/hmQp24TdgHRPXvpHyI66j+Q12vPu3OAzVuyraK9WHH22vjs9eybP512zyqjWLj
+        qPYhO061V1R7n2qj+HNrsk1V9sWIFYRvJtTJ25St+tQYbe/DqjFCagVq99baBzNcFdn/24W61FvS1Ooq
+        dnVf9lqFbAx/5Ve3xeOPUWUUwpfg7Qbhmwl1AjdVthdqoaeOb0qNobjVo32IY+/KSNkaUQGmjgvVrV7L
+        xASLGk/JPXwJ3u4QvplQJ7ESuyoMP9Sxe6Ap+3p+/1Vsldhk70+NqagQVccpttIO27ZBjaXkHL5NELzx
+        CN9MqBNZSbmQ5K8yY0Lb7Z+qxxTXd1diV11qpV+2V1vGfhVYwFl4xG5FVFFjKOMUvgRvGsI3E+pkVuzY
+        2O0DtyKM/eC6fUz1mOLm3pVhAqfJlXnFXkPrKzVYVF/KuIRvV78gxhnhmwl1Qiupx8f+pZn/0109rrjj
+        Y7kLanX/mE0T4Vhd/ZGHzTsmiFVbZVzC136lqLFQjvDNhDqhFXd8bKjG8rco1OOKO76OhVXqHQyp1Lgp
+        gZXKQrhqH1u1UcYlfA3bDmkI30yok1nx27S1egwDQB2j+G0UC6euQ9dR45smV+tTlAWwOlYZp/A1TS6s
+        TirCNxPqRFb8Nnaiq2NSuItsPnWcErbztTG3FGoOjl1A6+pLQL1+Rh2rxIZvym2Cqr1PtWmTGhPrEb6Z
+        UCexErZLWREp6sq+Ok4J2/mO1IrXUXMI2XPtYiWsfm6r4xR/r71Kyuup2vtUmzbFPqdJR/hmQp3Eimrb
+        NOhsNaX6U8cqqq2xMFLHKzZ3u5vAvkRCKdsqah5VbI/b7u6wcSyQh9nCUWGjjisTtg3ZPFW7MqoPn2rT
+        NntP1dg4jPDNhDqBFdU25d5fn+rLqGMV1dbE/kSuu0JuwajaKap9U/Z62gXNYVabKWFuzzNs71Ntqqg+
+        fKpNnSb/GFPdn2BPOsI3E+rkVVRbk/pzuuq+THW8otqa2NBSbX1thK89z2FCIDZ0wnap74cK4KZ3iYT9
+        hFSbKu5LMvU5GS7AlSN8M6FOXEW1ddTxStm//eCoNopqa9SxSt2/8zDMytNxj1tfFh4pQZxyr3DYNmXr
+        xWcr5mG2QEw4l5BqU8YFr5O6Aq471yYZ4ZsJdeIqqq0TuzeoLrL5VBtFtTWxH9CyPWcLvdQPueqnbuVs
+        Iaf2m60uJQCH3Ttvm5qLT7VR1PNK+UJyyl6fSUf4ZkKdtIpq66sLjZgLIaqdotqa1J+n9uF0oZcauo6a
+        hzquC2V/XNDkZ3ob1Fx8qo1i74lq3+QaQ9U216QifDOhTlhFtfXVrUxUm5Bqp6i2pukFwGGEc2j7LwDL
+        VP2sbrJKbIOai0+1UcrC19hjqk2Vul9ck4bwzYQ6WRXVNlT2wShboYVUW0W1dYbdt0wVjt/kQlUTdReU
+        moTUsNQ8fKqNUhW+xn6xqHZVVD+TivDNhDpRFdVWsVVGSB2nqHEV1dan2qSwAI8NcX/cphe7UsVeyW9j
+        +yFlO0bNwafaKHXha1K3iap+KUwawjcT6kRVVNu2qXEV1dbX5MKZ4z6kTcLXdLniDO8AiDHMfNwFK/WY
+        Eo4dUm2UmPBt8mfkTV6/cUT4ZkKdpIpq2zY1rqLaKqnB4384m4avY6vgJj+PFZuXfaGocWLYr4+U7Rjb
+        OvG3itQxij+motooMeFrUv8Cz8RugY0zwjcT6gRVVNu2qXEV1baKfUjdbVz+nqytcq3OLpKF4TZs+Pps
+        lWYfegsV67esb5ubPWZha3Nq+w8F7Dlav/alEM7B/t9eI3U/sn9clbBdSLVRYsPXpH7BmrZf11FD+AJA
+        DwhfAOgB4QsAPSB8AaAHhC8A9IDwBYAeEL4A0APCFwB6QPgCQA8IXwDoAeELAD0gfAGgB4QvAPSA8AWA
+        HhC+ANADwhcAekD4AkAPCF8A6AHhCwA9IHwBoAeELwD0gPAFgB4QvgDQAxe+Z1xw5SmDoD2ph/Cd3kj4
+        Apg0ceE7vXElJ1eKylOfrPQV/VghfAFMpCzCd25+8XY1OQAYVz/4+R8v6j18Zx5/9Xo1OQAYV9/87v63
+        +eE7NXXVCYP/bt6y5fLjpqamj+0kfE3R13L47nnk5fepyQHAOJqdXzwwCNfT3J0OW8/dfmIYvisX2w6H
+        r8rRkKwMWWeDshy+27fftGluYek5NUkAGDf3Pfiv623VG4avbTkc0fC1QWYePfhJNUkAGCdz84vPf+FL
+        O99Sv9/bbfhaWQ5gG2z28dduVpMFgHEwt7B48Ee7nr5ErXrdlkPTi21GVoaK/qysrn4vvXT7ppnHDn57
+        38Li/9TEAWBUzc4v/tX/qza16i3bcrCicjQkK5Wiz9XwtbS31L/ngb+fP/vEa/fum19cVE8CAEaFbTPs
+        fvjFb33uuru3hMFbvupN33IwslKxTouyGsCW+jYB+xa4+st3nLpz9zPbfjL3t/f/bPYvH/rpr5/78M6Z
+        5z6yY8/zly3b/cyyO+9/5qMAkJPbdx/44Hd++NBZgzA9zUK3LHj9vd5hVr1GVipFv1bWrH5tAvYtYBOy
+        idkEbaI2YdsjscnbkzDuSYXsCQPAkaJyyLisstyy/Bocuy543XbD4LF1q14rKj8VWVmm6NvKmgC2b4Ew
+        gG1vxA9hF8Q+90QBoA9hJrmscqFrORYGb9l2gxWVm2VkZZmifys22GoAu+0HF8CDiW0OQ9gFsc89UQDo
+        Q5hJLqv80B3Ub/aDV2w3dB++phjDShG+egUchrAL4jLuSQNAl1T+OC6r/ND1g9dy7nDwrobvclF5WUVW
+        1inGsrIugP1VsL8SduxJAUBu/JxygetCd/0e73DBa2RljGJMKzaBIoRXAti4EPaD2IUxAOTGzymXXS50
+        1wavy7yVovIxhqyMVYxtxQvglRAOg9hxTwoAcuLn1NrAXbfaHTp4jaxMUczBlSCEDwexH8YAkCM/r9bm
+        2NrQtaLyMIWsTFXMxS9uokEQ+/wnCQB9Uflk/BxbW1QOppKVTRXzCov/BABgVKwrKveakpVtKOZKoVAo
+        I11UvrVBVnaheB4UCoWSdVH51QVZCQDolqwEAHRLVgIAuiUrAQDdkpUAgG7JSgBAt2QlAKBbshIA0KVD
+        R/0f2fNXuTYT66EAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAACTsAAAWKCAYAAAA9xiNBAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAACH
